--- a/vms/ansible/playbook.yml
+++ b/vms/ansible/playbook.yml
@@ -24,3 +24,10 @@
   roles:
     - v0rts.java
     - hullufred.nexus
+
+- name: Configure Gitlab
+  hosts: gitlab
+  become: yes
+  remote_user: root
+  roles:
+    - samdoran.gitlab
